<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/textView_forgot_password"
        android:layout_width="139dp"
        android:layout_height="25dp"
        android:fontFamily="@font/montserratmedium"
        android:lineSpacingExtra="-3sp"
        android:text="@string/reset"
        android:textColor="#002e6d"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <EditText
        android:id="@+id/editTextTextEmailAddress_forgetpassword"
        android:layout_width="335dp"
        android:layout_height="41dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/group_15738"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:text="@string/textview_email"
        android:textColor="@color/button_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_forgot_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_forgot_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <Button
        app:backgroundTint="@null"
        android:id="@+id/ac_user_forgetpassword_layout_request_email_button"
        android:layout_width="335dp"
        android:layout_height="47dp"
        android:background="@drawable/borderless_buttoncolor_ripple"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="4sp"
        android:tag="request_email_button"
        android:text="@string/button_request_email"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress_forgetpassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress_forgetpassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress_forgetpassword"
        app:layout_constraintVertical_bias="0.513" />

    <ImageView
        android:id="@+id/imageView_ac_user_forgetpass_layout_page_1_pin"
        android:layout_width="97dp"
        android:layout_height="23.4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/textView_forgot_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_forgot_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521"
        app:srcCompat="@drawable/page_1" />

    <Button
        android:id="@+id/button_activity_user_forgetpass_layout_back_button"
        android:layout_width="10dp"
        android:layout_height="23.4dp"
        android:background="@android:color/transparent"
        android:hint=""
        app:layout_constraintBottom_toBottomOf="@+id/imageView_ac_user_forgetpass_layout_page_1_pin"
        app:layout_constraintEnd_toEndOf="@+id/imageView_ac_user_forgetpass_layout_page_1_pin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView_ac_user_forgetpass_layout_page_1_pin"
        app:layout_constraintTop_toTopOf="@+id/imageView_ac_user_forgetpass_layout_page_1_pin"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>