<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/horizontal_scroll_view_layout"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >



        <HorizontalScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <include
                            layout="@layout/welcome_screen_card_design"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <include
                            layout="@layout/welcome_screen_card_design_v2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>




        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view_layout"
        app:layout_constraintVertical_bias="0.281">

        <Button
            android:id="@+id/button_welcome_screen_register"
            android:layout_width="335dp"
            android:layout_height="47dp"
            android:background="@drawable/custom_input"
            android:backgroundTint="@color/button_color"
            android:fontFamily="@font/montserratmedium"
            android:text="@string/textview_register_screen_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.309"
            app:srcCompat="@drawable/group_1009" />

        <TextView
            android:id="@+id/textView_activity_user_welcome_screen_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:text="@string/textview_register_screen_have_an_Account"
            android:textColor="#002e6d"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_welcome_screen_register"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="@+id/button_welcome_screen_register"
            app:layout_constraintTop_toBottomOf="@+id/button_welcome_screen_register"
            app:layout_constraintVertical_bias="0.441" />

        <TextView
            android:id="@+id/textview_activity_welcome_screen_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:text="@string/button_giris_yap"
            android:textColor="#002e6d"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_welcome_screen_register"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toEndOf="@+id/textView_activity_user_welcome_screen_text"
            app:layout_constraintTop_toBottomOf="@+id/button_welcome_screen_register"
            app:layout_constraintVertical_bias="0.368" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>